--- a/collegebeamer.sty
+++ b/collegebeamer.sty
@@ -84,6 +84,13 @@
     \renewcommand{\qaStr}{\textbf{全世界无产者，联合起来！}}
 }
 
+\DeclareOption{MSU}{
+    \renewcommand{\maincolorRGB}{24, 69, 59}
+    \renewcommand{\colorlogoPath}{src/MSU/color-logo.png}
+    \renewcommand{\translogoPath}{src/MSU/trans-logo.png}
+    \renewcommand{\backgroundPath}{src/MSU/background.png}
+}
+
 \ProcessOptions\relax
 
 % --- typeset & elements settings ---
